fix axis containers overlapping issue

--- a/src/encoded/static/scss/encoded/modules/_charts.scss
+++ b/src/encoded/static/scss/encoded/modules/_charts.scss
@@ -2122,8 +2122,8 @@ body[data-path="/statistics"] {
 
     .axis-container {
         position: relative;
-        width: 300px;
-        height: 300px;
+        width: 250px;
+        height: 287px;
 
         .x-axis {
             position: absolute;
